[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/nbSplash.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/MenuFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Src/Menu/DevLogViewer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/MagoFont3_16.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Fonts/mago2.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Src/BaseButton/BaseButton.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 10 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogWindow" type="ColorRect" parent="Main"]
margin_left = 176.0
margin_top = 88.0
margin_right = 608.0
margin_bottom = 328.0
color = Color( 0.341176, 0.341176, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevLogViewer" parent="Main/LogWindow" instance=ExtResource( 8 )]
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_text = "Loading DevLog...
"
text = "Loading DevLog...
"

[node name="LevelSelect" type="OptionButton" parent="Main"]
margin_left = 16.0
margin_top = 24.0
margin_right = 160.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/LevelSelect"]
margin_top = -16.0
margin_right = 96.0
margin_bottom = 8.0
text = "Load Level:"

[node name="ButtonPlay" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 200.0
margin_right = 144.0
margin_bottom = 224.0
label = "New Game"

[node name="ButtonLoad" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 232.0
margin_right = 144.0
margin_bottom = 256.0
label = "Load Game"

[node name="ButtonSettings" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 264.0
margin_right = 144.0
margin_bottom = 288.0
label = "Settings"

[node name="ButtonExit" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 304.0
margin_right = 144.0
margin_bottom = 328.0
label = "Exit"

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonSound" parent="Settings" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 96.0
margin_right = 384.0
margin_bottom = 120.0
label = "Button"

[node name="ButtonMusic" parent="Settings" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 128.0
margin_right = 384.0
margin_bottom = 152.0
label = "Button"

[node name="ButtonFullscreen" parent="Settings" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 160.0
margin_right = 384.0
margin_bottom = 184.0
label = "Button"

[node name="ButtonCredits" parent="Settings" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 216.0
label = "Credits"

[node name="ButtonBack" parent="Settings" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 232.0
margin_right = 384.0
margin_bottom = 256.0
label = "Back"

[node name="LoadGame" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonLoad1" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 128.0
margin_right = 384.0
margin_bottom = 152.0
label = "Slot 1"

[node name="ButtonLoad2" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 160.0
margin_right = 384.0
margin_bottom = 184.0
label = "Slot 2"

[node name="ButtonLoad3" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 216.0
label = "Slot 3"

[node name="ButtonBack" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 232.0
margin_right = 384.0
margin_bottom = 256.0
label = "Back"

[node name="Copyright" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]©2020 by NimbleBeasts [color=#34859d]`[/color]NimbleBeasts [color=#9d303b]¥[/color]NimbleBeasts[/center]"
text = "©2020 by NimbleBeasts `NimbleBeasts ¥NimbleBeasts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_right = -4.0
margin_bottom = 16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[right]Version[/right]"
text = "Version"
[connection signal="button_up" from="Main/ButtonPlay" to="." method="_on_ButtonPlay_button_up"]
[connection signal="button_up" from="Main/ButtonLoad" to="." method="_on_ButtonLoad_button_up"]
[connection signal="button_up" from="Main/ButtonSettings" to="." method="_on_ButtonSettings_button_up"]
[connection signal="button_up" from="Main/ButtonExit" to="." method="_on_ButtonExit_button_up"]
[connection signal="button_up" from="Settings/ButtonSound" to="." method="_on_ButtonSound_button_up"]
[connection signal="button_up" from="Settings/ButtonMusic" to="." method="_on_ButtonMusic_button_up"]
[connection signal="button_up" from="Settings/ButtonFullscreen" to="." method="_on_ButtonFullscreen_button_up"]
[connection signal="button_up" from="Settings/ButtonCredits" to="." method="_on_ButtonCredits_button_up"]
[connection signal="button_up" from="Settings/ButtonBack" to="." method="_on_ButtonBack_button_up"]
[connection signal="button_up" from="LoadGame/ButtonLoad1" to="." method="_on_ButtonLoad1_button_up"]
[connection signal="button_up" from="LoadGame/ButtonLoad2" to="." method="_on_ButtonLoad2_button_up"]
[connection signal="button_up" from="LoadGame/ButtonLoad3" to="." method="_on_ButtonLoad3_button_up"]
[connection signal="button_up" from="LoadGame/ButtonBack" to="." method="_on_ButtonBack_button_up"]
